# termwiki

./: .coveragerc  .gitignore  BUGS.md  README.md  TODO.md  __init__.py  __main__.py  appmap.yml  formatting.py  indentation_markdown.md  main.py  manuals.py  myman.py  plantuml-examples.md  pypi_publish.py  pyproject.toml  pytest.ini  search.py  setup.py  setup.py~
.idea~/: misc.xml
.idea~/inspectionProfiles/: Project_Default.xml
.run/: bash.run.xml
common/: click_extension.py
docs/: bugs.md  fuzzy-backends.txt  rapidfuzz_examples.ipynb  todo.md  weights_of_different_cases_when_finding_a_page.md
err/: dev_err.py
manuals/: __init__.py  __main__.py  bash  colors.py  consts.py  decorators.py  formatting.py  ipython_lexer.py  main.py  manuals.py  myman.py  regexp.py  search.py  topic.py
manuals/common/: click_extension.py  types.py
manuals/decorators/: __init__.py  decorators.py  syntax.py
manuals/man/: bash
manuals/man/python/: datamodel.py
manuals/prompt/: item.py  options.py  prompt.py
pages/: __init__.py  __main__.py  consts.py  main.py  regexp.py  search.py  topic.py
pages/decorators/: __init__.py  decorators.py  syntax.py
pages/err/: __init__.py
pages/pages/: pages.py
pages/pages/python/: datamodel.py
pages/prompt/: item.py  options.py
prompt/: __init__.py  item.py  options.py  prompt.py  util.py
termwiki/: __init__.py  __main__.py  cli.py  colors.py  config.py  consts.py  fzf  ipython_lexer.py  log.py  main.py  page.py  page_tree.py  regexp.py  search.py  termwiki.code-workspace  topic.py  util.py
termwiki/common/: click_extension.py  types.py
termwiki/decorators/: __init__.py  decorators.py  syntax.py
termwiki/directives/: __init__.py  decorators.py  resolver.py  syntax.py
termwiki/indentation_markdown/: __init__.py  indentation_markdown.py
termwiki/page/: __init__.py  ast_utils.py  caching_generator.py  decorators.py  directory_page.py  errors.py  file_page.py  function_page.py  markdown_file_page.py  merged_page.py  page.py  page_tree.py  python_file_page.py  variable_page.py
termwiki/pages/: pages.py
termwiki/pages/python/: datamodel.py
termwiki/prompt/: __init__.py  item.py  options.py  prompt.py  util.py
termwiki/render/: __init__.py  decorators.py  render.py  syntax.py  util.py
test/: __init__.py  conftest.py  pytest.ini  util.py
test/data/mock_pages_root/: click.option.multi-value.md  pages.py  with whitespace.py
test/data/mock_pages_root/indentation_markdown/: click.option.no-code-blocks.indented-md
test/data/mock_pages_root/no-self-named-files/: different_name.py
test/data/mock_pages_root/page_behavior/: readable.md
test/data/mock_pages_root/page_behavior/only_down/: only_down.py
test/data/mock_pages_root/page_behavior/readable/: readable.py
test/data/mock_pages_root/python_objects/: python_objects.py
test/data/mock_pages_root/readable/: readable.py
test/data/mock_pages_root/ugly dirname_/: ugly_dirname.py
test/test_directives/: test_syntax_highlight.py
test/test_directives/data/: click.option.indented-md  click.option.indented.md  click.option.md
test/test_indentation_markdown/: test_indentation_markdown.py
test/test_page/: test_different_name.py  test_fuzzy_backend.py  test_fuzzy_names.py  test_meta_page_attributes.py  test_normalize_names.py  test_page.py  test_page_behavior.py  test_page_tree.py  test_python_objects.py  test_same_name.py  test_same_name_complex.py  test_same_name_nested.py  test_same_name_same_level.py
test/test_render/: test_decorators.py  test_syntax_highlight.py
test/test_render/data/: click.option.flat.md
